modifique el home

--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -18,8 +18,7 @@ const photos = [
             Bienvenido a tu descanso patagónico.
           </h1>
           <p class="text-lg text-primary-950/70 dark:text-primary-200/70 sm:text-xl">
-            Dos alojamientos únicos a orillas del lago Nahuel Huapi. Pet friendly, equipados con
-            todo lo que necesitás para descansar y disfrutar la montaña patagónica.
+            Dos alojamientos únicos en Villa la Angostura, rodeados de bosque patagónico. Pet friendly, equipados con todo lo que necesitás para descansar y disfrutar la montaña.
           </p>
         </div>
         <a
@@ -92,6 +91,7 @@ const photos = [
             ></button>
           ))}
         </div>
+
       </div>
 
     </div>
