--- a/src/pages/el-container.astro
+++ b/src/pages/el-container.astro
@@ -70,7 +70,6 @@ const servicios = [
         }"
         class="relative overflow-hidden rounded-3xl"
       >
-        <!-- Fotos -->
         {photos.map((photo, i) => (
           <div
             x-show={`current === ${i}`}
@@ -161,3 +160,17 @@ const servicios = [
   </section>
 
 </Layout>
+
+<script>
+  const srcs = [
+    'https://images.unsplash.com/photo-1520250497591-112f2f40a3f4?w=1200&q=80',
+    'https://images.unsplash.com/photo-1584132967334-10e028bd69f7?w=1200&q=80',
+    'https://images.unsplash.com/photo-1560185007-cde436f6a4d0?w=1200&q=80',
+    'https://images.unsplash.com/photo-1631049307264-da0ec9d70304?w=1200&q=80',
+    'https://images.unsplash.com/photo-1556909114-f6e7ad7d3136?w=1200&q=80',
+    'https://images.unsplash.com/photo-1510798831971-661eb04b3739?w=1200&q=80',
+    'https://images.unsplash.com/photo-1501183638710-841dd1904471?w=1200&q=80',
+    'https://images.unsplash.com/photo-1476514525535-07fb3b4ae5f1?w=1200&q=80',
+  ];
+  srcs.forEach(src => { const img = new Image(); img.src = src; });
+</script>
