--- a/src/pages/la-casita.astro
+++ b/src/pages/la-casita.astro
@@ -71,7 +71,6 @@ const servicios = [
         }"
         class="relative overflow-hidden rounded-3xl"
       >
-        <!-- Fotos -->
         {photos.map((photo, i) => (
           <div
             x-show={`current === ${i}`}
@@ -162,3 +161,17 @@ const servicios = [
   </section>
 
 </Layout>
+
+<script>
+  const srcs = [
+    'https://images.unsplash.com/photo-1518780664697-55e3ad937233?w=1200&q=80',
+    'https://images.unsplash.com/photo-1600596542815-ffad4c1539a9?w=1200&q=80',
+    'https://images.unsplash.com/photo-1600210492493-0946911123ea?w=1200&q=80',
+    'https://images.unsplash.com/photo-1552321554-5fefe8c9ef14?w=1200&q=80',
+    'https://images.unsplash.com/photo-1556909114-f6e7ad7d3136?w=1200&q=80',
+    'https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=1200&q=80',
+    'https://images.unsplash.com/photo-1499793983690-e29da59ef1c2?w=1200&q=80',
+    'https://images.unsplash.com/photo-1476514525535-07fb3b4ae5f1?w=1200&q=80',
+  ];
+  srcs.forEach(src => { const img = new Image(); img.src = src; });
+</script>
