--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -7,8 +7,8 @@ const links = [
   },
   {
     ref: '02',
-    name: 'Galería',
-    href: '/gallery',
+    name: 'About',
+    href: '/about',
   },
   {
     ref: '03',
@@ -35,8 +35,8 @@ const links = [
 
 <header
   x-data="{ open: false }"
-  class="transition"
-  :class="{ 'bg-primary-500/10 dark:bg-primary-400/10': open, 'bg-primary-50 dark:bg-primary-950': !(open) }"
+  class="sticky top-0 z-40 border-b border-primary-900/5 shadow-sm backdrop-blur-md transition dark:border-primary-300/5"
+  :class="{ 'bg-primary-500/20 dark:bg-primary-400/20': open, 'bg-primary-50/70 dark:bg-primary-950/70': !(open) }"
 >
   <div
     class="mx-auto flex max-w-2xl items-center justify-between px-4 py-4 sm:px-6 sm:py-6 lg:max-w-7xl lg:px-8"
