--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -7,8 +7,8 @@ const links = [
   },
   {
     ref: '02',
-    name: 'About',
-    href: '/about',
+    name: 'Galería',
+    href: '/gallery',
   },
   {
     ref: '03',
@@ -24,11 +24,6 @@ const links = [
     ref: '05',
     name: 'Reservas',
     href: '/reservas',
-  },
-  {
-    ref: '06',
-    name: 'Contacto',
-    href: '/contact',
   },
 ];
 ---
